--- a/index.html
+++ b/index.html
@@ -14,11 +14,23 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
-    <h1>teste</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto culpa quidem nostrum explicabo nobis.
-        Explicabo adipisci officia corporis iusto beatae quibusdam est deserunt, soluta optio nulla nostrum nisi esse
-        voluptas.</p>
+<body class="main_bg">
+    <aside class="menu">
+        <section class="main-content menu-content">
+            <h1><a href="#">LOGO</a></h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Intro</a></li>
+                    <li><a href="#">Top 3</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </section>
+    </aside>
+    <section class="main-content"></section>
+    <section class="main-content"></section>
 </body>
 
 </html>
